--- a/src/components/Coupons/Coupons.css
+++ b/src/components/Coupons/Coupons.css
@@ -1,11 +1,13 @@
 .coupon{
     width:80%;
+    margin: 0 auto;
     height: 180px;
     background-color: #F0A500;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+   margin-top: 3rem;
 }
 .coupon-btn{
     display: flex;
