--- a/src/components/Coupons/Coupons.css
+++ b/src/components/Coupons/Coupons.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     justify-content: space-around;
    margin-top: 3rem;
+   margin-bottom: 3rem;
 }
 .coupon-btn{
     display: flex;
