--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -1,5 +1,5 @@
 .about-left {
-    height: 100%;
+    height: 500px;
     width: 100%;
     background-color: #F0A500;
     color: #000;
@@ -11,17 +11,28 @@
     justify-content: space-around;
    
 }
+.about-right{
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .about-left>li{
     font-size: 1.2rem;
 }
-
-.box1 {
-    width: 100%;
+.about-right{
+    display: flex;
+    gap: 12px 0;
+}
+.about-right .box1 {
+    width: 70%;
     background-color: #1B1A17;
     color: #F0A500;
-    margin-bottom: 2rem;
-    height:100%;
+    /* margin-bottom: 2rem; */
     border-radius: 12px;
+    height: 270px;
+    padding: 1rem;
    
 }
 .box1>h1{
