--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,40 +1,44 @@
-footer{
-    background-color: #1B1A17;
+footer {
+    background-color: #05386b;
     height: 100%;
-    color: #F0A500;
-    margin-bottom: 1rem;
+    color: #FFFF;
     padding: 1rem 0;
 }
 
-.footerlist>ul{
+.footerlist>ul {
     display: flex;
     flex-direction: column;
-   
+    font-size: 1.2rem;
+
 }
-.footer-heading{
+
+.footer-heading {
     display: flex;
     margin-left: 2rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
-.orange{
-    color: #9b7c0f;
+
+.orange {
+    color: #FFFF;
 }
-.footer-content{
+
+.footer-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     margin-top: 5px;
 }
-.footer-content>h4{
-    font-size: 1.2rem;
+
+.footer-content>h4 {
+    font-size: 1.5rem;
     width: 80%;
     margin: 0 auto;
 }
 
 
-.footer-content>p{
-    color: #9b7c0f;
-    font-size: 12px;
+.footer-content>p {
+    color: #FFFF;
+    font-size: 1.2rem;
     width: 80%;
     margin: 0 auto;
 }
