--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,7 +1,11 @@
+.contact-section {
+    height: 100vh;
+}
+
 .contact-form {
     width: 30%;
-    height: 400px;
-    background-color: #E45826;
+    height: 550px;
+    background-color: #05386b;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -19,19 +23,28 @@
 
 }
 
-.contact-details>input {
-    background-color: #1B1A17;
-    border: none;
-    border-radius: 5px;
-    color: #F0A500;
-    height: 40px;
+.contact-details form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.contact-details>textarea {
-    background-color: #1B1A17;
+.contact-details form>input {
+    background-color: #8EE4AF;
+    height: 50px;
+    width: 100%;
     border: none;
     border-radius: 5px;
-    color: #F0A500;
+
+
+}
+
+.contact-details form>textarea {
+    background-color: #8EE4AF;
+    border: none;
+    border-radius: 5px;
+
+
 }
 
 .contact-details>button {
@@ -44,4 +57,20 @@
 .contact-btn {
     display: flex;
     justify-content: end;
+
+
+}
+
+.contact-btn>button {
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    width: 120px;
+    background-color: #EDF5E1;
+    border: none;
+    border-radius: 5px;
+    height: 3rem;
+    font-size: 1.2rem;
+    align-items: center;
+
 }
