--- a/src/components/Upload coupon/Upload.css
+++ b/src/components/Upload coupon/Upload.css
@@ -1,7 +1,12 @@
+.upload-section{
+    height: 100vh;
+    padding-top: 1rem;
+}
+
 .upload-coupons{
-    height: 400px;
-    width: 400px;
-    background-color: #E45826;
+    height: 550px;
+    width: 500px;
+    background-color: #05386b;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -13,14 +18,40 @@
 .inputs{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    width: 80%;
+    gap: 2rem;
+    width: 100%;
     padding: 12px 0;
     
 }
 .upload-coupons .inputs>input{
-    background-color: #1B1A17;
+    background-color: #8EE4AF;
     border: none;
     height: 50px;
     
+}
+.upload-coupons .inputs>textarea{
+    background-color: #8EE4AF;
+    border: none;
+    border-radius: 5px;
+
+}
+
+.upload-btn>button{
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    width: 120px;
+    background-color: #EDF5E1;
+    border: none;
+    border-radius: 5px;
+    height: 3rem;
+    font-size: 1.2rem;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.color{
+    color: #05386b;
+    font-weight: 600;
+    font-size: 3rem;
 }
