--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,25 +22,31 @@
     padding: 0 12px;
 }
 
-.logo > img {
-    width: 100%; /* Make the image responsive */
-    max-width: 240px; /* Set maximum width */
+.logo>img {
+    width: 60%;
+    /* Make the image responsive */
+    max-width: 240px;
+    /* Set maximum width */
     height: auto;
-    padding-top: 2rem;
-    animation: zoomInOut 3s infinite alternate; /* Apply animation */
+    padding-top: 1rem;
+    animation: zoomInOut 3s infinite alternate;
+    /* Apply animation */
 }
 
 @keyframes zoomInOut {
     0% {
         transform: scale(1);
     }
+
     100% {
-        transform: scale(1.1); /* Zoom in to 110% */
+        transform: scale(1.1);
+        /* Zoom in to 110% */
     }
 }
 
 @media screen and (max-width: 768px) {
-    .logo > img {
-        max-width: 200px; /* Adjust maximum width for smaller screens */
+    .logo>img {
+        max-width: 200px;
+        /* Adjust maximum width for smaller screens */
     }
 }
