--- a/src/components/EducationUpload/EducationUpload.css
+++ b/src/components/EducationUpload/EducationUpload.css
@@ -1,12 +1,8 @@
-/* EducationUpload.css */
-
-/* Override the default Breadcrumb background color */
 .breadcrumb {
-    background-color: transparent;
-  }
-  
-  /* Style for active Breadcrumb item */
-  .breadcrumb .active {
-    color: #05386b; /* Change text color for active item */
-  }
-  
+  background-color: transparent;
+}
+
+
+.breadcrumb .active {
+  color: #05386b;
+}
