--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,15 +1,15 @@
 footer {
-    background-color: #05386b;
- 
-    color: #FFFF;
+    background-color: #212121;
+    color: #FFFFFF;
     padding: 1rem 0;
-   
+    border-top: 1px solid #ffffff4e;
+
 }
 
 .footerlist>ul {
     display: flex;
     flex-direction: column;
-    font-size: 1.2rem;
+    font-size: 1rem;
 
 }
 
@@ -39,11 +39,12 @@ footer {
 
 .footer-content>p {
     color: #FFFF;
-    font-size: 1.2rem;
+    font-size: 1rem;
     width: 80%;
     margin: 0 auto;
 }
-.footer {
+
+/* .footer {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -51,4 +52,4 @@ footer {
     color: #ffff;
     padding: 1rem 0;
   }
-  
+   */
