--- a/src/components/ClothUpload/ClothUpload.css
+++ b/src/components/ClothUpload/ClothUpload.css
@@ -1,10 +1,11 @@
 
 .breadcrumb {
     background-color: transparent;
+    
   }
   
   
   .breadcrumb .active {
-    color: #05386b;
+    color: #F0A500;
   }
   
