--- a/src/components/EducationSection/EducationSection.css
+++ b/src/components/EducationSection/EducationSection.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap");
 
 .education-hero {
     display: flex;
@@ -7,24 +7,21 @@
 
 .ed-h1>h1 {
     margin-right: 20px;
-
     position: absolute;
     top: 18%;
-    right: 4%;
-
+    right: 3%;
     transform: translateX(-50%);
-
     font-family: "Herr Von Muellerhoff", cursive;
     font-size: 100px;
-    color: #c59d5f;
+    color: #f0a500;
 }
+
 
 .ed-btn {
     display: flex;
-    justify-content: start;
     align-items: center;
+    justify-content: center;
     gap: 0 1rem;
-
 }
 
 .ed-btn>button {
@@ -34,5 +31,13 @@
 }
 
 .ed-btn>span {
+    color: #f0a500;
     font-size: 1.5rem;
+}
+
+.ml-5>h1 {
+    color: #f0a500;
+    text-align: center;
+    font-weight: normal;
+    margin-top: 3rem;
 }
