--- a/src/components/FetchData.css
+++ b/src/components/FetchData.css
@@ -7,12 +7,15 @@
     height: 100vh;
 }
 .card {
-    background-color: #05386b;
-    height: 250px;
+      background-color: #000;
+    border: 1px solid #ebcc02e7;
+    height: 250px; /* Fixed height of the card */
     border-radius: 8px;
     width: 300px;
     position: relative; /* Ensure relative positioning for the parent */
     color: #FFF;
+    overflow: hidden; /* Hide content that exceeds the dimensions */
+
 }
 
 .card-header {
@@ -25,7 +28,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: auto; /* Enable vertical scrolling */
+    max-height: calc(100% - 80px); /* Set max height to 100% minus header and buttons height */
 }
+
 
 .card-body p {
     margin: 0;
