--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -8,22 +8,27 @@
 .login-form {
     width: 100%;
     max-width: 400px;
-    padding: 40px; 
-    border-radius: 5px;
+    padding: 40px;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #05386b;
+    background-color: #000;
     color: #FFF;
+    border: 1px solid #ebcc028c;
+
 }
 
-h1 {
+.login-form>h1 {
     text-align: center;
     margin-bottom: 30px;
+    color: #F0A500;
 }
 
 .submit-button {
     width: 100%;
-    margin-top: 30px; 
-    padding: 15px; 
+    margin-top: 30px;
+    padding: 15px;
+    background: #F0A500;
+    color: #000;
 }
 
 .submit-button:disabled {
@@ -32,11 +37,13 @@ h1 {
 }
 
 .signup-link {
-    display: block; 
-    text-align: center; 
-    color: #007bff;
+    display: block;
+    text-align: center;
+    color: #F0A500;
     text-decoration: none;
     margin-top: 20px;
+    font-size: 1.5rem;
+
 }
 
 .signup-link:hover {
@@ -44,7 +51,7 @@ h1 {
 }
 
 b {
-    display: block; 
+    display: block;
     color: red;
-    margin-top: 20px; 
+    margin-top: 20px;
 }
