--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,10 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-
-
   }
-
   .nav-menu {
     display: flex;
     align-items: center;
@@ -16,37 +13,51 @@
   .logo {
     text-align: center;
     padding-left: 3rem;
+    display: flex;
   }
-  .logo > h2 {
+
+  .logo>h2 {
     color: #FFFFFF;
     font-size: 2.4rem;
-    position: relative; /* Required for absolute positioning of pseudo-element */
-    text-decoration: none; /* Remove underline by default */
-}
+    position: relative;
+    /* Required for absolute positioning of pseudo-element */
+    text-decoration: none;
+    /* Remove underline by default */
+  }
 
 
-  .logo>h2>span{
+  .logo>h2>span {
     /* max-width: 200px;
     height: auto;
     padding-top: 1rem;
     animation: zoomInOut 3s infinite alternate; */
     color: #ffb803;
     font-size: 3rem;
+
+   
   }
-  .logo > h2::before {
-    content: ''; /* Required for pseudo-element */
+
+  .logo>h2::before {
+    content: '';
+    /* Required for pseudo-element */
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 0; /* Initially set width to 0 */
-    height: 2px; /* Set the height of the underline */
-    background-color: #ffb803; /* Set the color of the underline */
-    transition: width 0.5s ease; /* Add transition for width */
-}
+    width: 0;
+    /* Initially set width to 0 */
+    height: 2px;
+    /* Set the height of the underline */
+    background-color: #ffb803;
+    /* Set the color of the underline */
+    transition: width 0.5s ease;
+    /* Add transition for width */
+  }
 
-  .logo > h2:hover::before {
-    width: 100%; /* Expand width to 100% on hover */
-}
+  .logo>h2:hover::before {
+    width: 100%;
+    /* Expand width to 100% on hover */
+  }
+
   .nav-menu ul {
     display: flex;
     align-items: center;
@@ -96,3 +107,28 @@
     right: 10px;
     transform: translateY(-50%);
   }
+  .linkStyle {
+    position: relative;
+    text-decoration: none;
+    color: #FFFFFF;
+    height: 30px;
+    font-size: 1.3rem;
+    padding: 0 12px;
+  }
+  
+  .linkStyle::before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ffb803;
+    transition: width 0.3s ease; /* Add transition for width */
+  }
+  
+  .linkStyle:hover::before {
+    width: 100%; /* Expand width to 100% on hover */
+   
+  }
+  
