--- a/src/Pages/FrontPage.css
+++ b/src/Pages/FrontPage.css
@@ -120,5 +120,58 @@ a:hover {
 .hs-right>.cardFP .box1:hover {
     box-shadow: 0 0 20px rgb(255, 255, 255);
     cursor: pointer;
-    /* Apply box shadow on hover */
+}
+
+
+@media  (max-width:1280px) {
+    .homepage-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+.hs-left>img {
+    height: 300px;
+    /* width: 100%; */
+    object-fit: contain;
+    border-radius: 20px;
+    border: 1px solid #ebcc028c;
+    transition: transform 0.5s ease;
+    
+    /* Add transition for smooth effect */
+}
+.hs-left>h1 {
+    position: absolute;
+    top: 23%;
+    left: 43%;
+    font-family: "Herr Von Muellerhoff", cursive;
+    color: #c59d5f;
+    font-size: 4rem;
+}
+
+.hs-right>.cardFP {
+    width: 300px;
+    height: 300px;
+    background: #07182E;
+    position: relative;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.hs-right>.cardFP .box1 {
+    color: white;
+    font-size: 1rem;
+    margin: 10px;
+    z-index: 10;
+    height: 100px;
+    width: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.506);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
 }
