--- a/src/components/Invite/Invite.css
+++ b/src/components/Invite/Invite.css
@@ -1,13 +1,17 @@
+.invite-section {
+	height: 50vh;
+}
+
 .share {
 	height: 10rem;
 	width: 25rem;
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
-    border: 1px solid #ebcc028c;
+	border: 1px solid #ebcc028c;
 	border-radius: 10px;
-    margin: 3rem auto;
-    
+	margin: 0 auto;
+
 }
 
 .copybtn {
@@ -19,37 +23,44 @@
 	border-radius: 1rem;
 	transition: all ease-in-out 0.2s;
 }
+
 .copybtn:hover {
 	color: #000;
 	background-color: #F0A500;
 }
+
 .justshare {
 	color: #fff;
 	transition: all ease-in-out 0.2s;
 }
+
 .justshare:hover {
 	color: #F0A500;
 }
+
 .whatsappshare {
 	color: #fff;
 	transition: all ease-in-out 0.2s;
 }
+
 .whatsappshare:hover {
 	color: #F0A500;
 }
-.forge{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+
+.forge {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
 }
 
-.forge-title{
-    color: #F0A500;
-    font-size: 3rem;
+.forge-title {
+	color: #F0A500;
+	font-size: 3rem;
 }
-@media  (max-width:1280px){
-	.forge{
+
+@media (max-width:1280px) {
+	.forge {
 		margin-top: 5rem;
 	}
 }
