--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,13 +10,15 @@ footer {
     display: flex;
     flex-direction: column;
     font-size: 1rem;
-
+    margin-top: 1rem;
 }
 
 .footer-heading {
     display: flex;
     margin-left: 2rem;
     font-size: 1.5rem;
+    color: #F0A500;
+
 }
 
 .orange {
@@ -34,6 +36,8 @@ footer {
     font-size: 1.5rem;
     width: 80%;
     margin: 0 auto;
+    color: #F0A500;
+
 }
 
 
@@ -41,7 +45,7 @@ footer {
     color: #FFFF;
     font-size: 1rem;
     width: 80%;
-    margin: 0 auto;
+   
 }
 
 /* .footer {
@@ -53,3 +57,18 @@ footer {
     padding: 1rem 0;
   }
    */
+
+.footerlist>ul>li {
+    list-style: none;
+    line-height: 30px;
+}
+.quote {
+    font-style: italic;
+    width: 90%;
+    color: #fff;
+    border-left: 5px solid #F0A500; /* Change color as desired */
+    padding: 10px;
+
+    background-color: #212121; /* Optional background color */
+  }
+  
