--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     align-items: center;
     height: 100px;
   }
+
   .nav-menu {
     display: flex;
     align-items: center;
@@ -34,7 +35,7 @@
     color: #ffb803;
     font-size: 3rem;
 
-   
+
   }
 
   .logo>h2::before {
@@ -107,6 +108,7 @@
     right: 10px;
     transform: translateY(-50%);
   }
+
   .linkStyle {
     position: relative;
     text-decoration: none;
@@ -115,7 +117,7 @@
     font-size: 1.3rem;
     padding: 0 12px;
   }
-  
+
   .linkStyle::before {
     content: '';
     position: absolute;
@@ -124,11 +126,16 @@
     width: 0;
     height: 2px;
     background-color: #ffb803;
-    transition: width 0.3s ease; /* Add transition for width */
+    transition: width 0.3s ease;
+    /* Add transition for width */
   }
-  
+
   .linkStyle:hover::before {
-    width: 100%; /* Expand width to 100% on hover */
-   
+    width: 100%;
+    /* Expand width to 100% on hover */
+
   }
-  
+  .logout-btn{
+    background-color: #212121;
+    border: none;
+  }
