--- a/src/Pages/FrontPage.css
+++ b/src/Pages/FrontPage.css
@@ -1,34 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap');
 
 .hs-right {
-    margin: 5rem;
     display: flex;
     margin-top: 8rem;
-
+    width: 100%;
+    margin: 5rem auto;
 
 }
 
 .hs-left {
     margin: 5rem 5rem;
 
+
 }
 
 .hs-left>img {
     height: 600px;
-    /* width: 100%; */
+
     object-fit: contain;
     border-radius: 20px;
     border: 1px solid #ebcc028c;
     transition: transform 0.5s ease;
-    /* Add transition for smooth effect */
+
 }
 
 
 
 .hs-left>h1 {
     position: absolute;
-    top: 29%;
-    left: 25%;
+    top: 3%;
+    left: 65%;
     font-family: "Herr Von Muellerhoff", cursive;
     color: #c59d5f;
     font-size: 5.4rem;
@@ -43,18 +44,45 @@
     place-content: center;
     place-items: center;
     overflow: hidden;
-    border-radius: 20px;
+
+    .hs-left {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        text-align: center;
+
+    }
+
+    .hs-right {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        text-align: center;
+
+    }
+
+    .hs-left>h1 {
+        font-family: "Herr Von Muellerhoff", cursive;
+        color: #c59d5f;
+        font-size: 5.4rem;
+    }
+
+    @media (max-width: 1280px) {
+        .hs-left>h1 {
+            font-size: 4rem;
+        }
+    }
+
+    border-radius: 20pxa;
 
 }
 
 .hs-right>.cardFP {
     width: 600px;
     height: 500px;
-    /* background: #ebcc02d8; */
+
     position: relative;
     display: flex;
     flex-direction: column;
-    /* Display children in column */
+
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -70,7 +98,7 @@
     color: white;
     font-size: 1.8rem;
     margin: 10px;
-    /* Add some margin between the boxes */
+
     z-index: 10;
     height: 180px;
     width: 200px;
@@ -80,15 +108,18 @@
     justify-content: center;
     border-radius: 10px;
 }
-a{
+
+a {
     color: white;
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: none;
     color: #ebcc02;
-    /* Remove text decoration on hover */
+
 }
+
 .hs-right>.cardFP::before {
     content: '';
     position: absolute;
@@ -123,55 +154,57 @@ a:hover {
 }
 
 
-@media  (max-width:1280px) {
-    .homepage-section{
+@media (max-width:1280px) {
+    .homepage-section {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    
-.hs-left>img {
-    height: 300px;
-    /* width: 100%; */
-    object-fit: contain;
-    border-radius: 20px;
-    border: 1px solid #ebcc028c;
-    transition: transform 0.5s ease;
-    
-    /* Add transition for smooth effect */
-}
-.hs-left>h1 {
-    position: absolute;
-    top: 23%;
-    left: 43%;
-    font-family: "Herr Von Muellerhoff", cursive;
-    color: #c59d5f;
-    font-size: 4rem;
-}
 
-.hs-right>.cardFP {
-    width: 300px;
-    height: 300px;
-    background: #07182E;
-    position: relative;
-    display: flex;
-    place-content: center;
-    place-items: center;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.hs-right>.cardFP .box1 {
-    color: white;
-    font-size: 1rem;
-    margin: 10px;
-    z-index: 10;
-    height: 100px;
-    width: 100px;
-    border: 1px solid rgba(255, 255, 255, 0.506);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-}
+    .hs-left>img {
+        height: 300px;
+        /* width: 100%; */
+        object-fit: contain;
+        border-radius: 20px;
+        border: 1px solid #ebcc028c;
+        transition: transform 0.5s ease;
+
+        /* Add transition for smooth effect */
+    }
+
+    .hs-left>h1 {
+        position: absolute;
+        top: 23%;
+        left: 43%;
+        font-family: "Herr Von Muellerhoff", cursive;
+        color: #c59d5f;
+        font-size: 4rem;
+    }
+
+    .hs-right>.cardFP {
+        width: 300px;
+        height: 300px;
+        background: #07182E;
+        position: relative;
+        display: flex;
+        place-content: center;
+        place-items: center;
+        overflow: hidden;
+        border-radius: 20px;
+    }
+
+    .hs-right>.cardFP .box1 {
+        color: white;
+        font-size: 1rem;
+        margin: 10px;
+        z-index: 10;
+        height: 100px;
+        width: 100px;
+        border: 1px solid rgba(255, 255, 255, 0.506);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+    }
 
 }
