--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -77,10 +77,10 @@
     padding: 8px;
     height: 45px;
     font-size: 1.2rem;
-    border-radius: 5px;
     border: none;
+
     background-color: #212121;
-    color: #FFFFFF;
+    color: #FFF;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -93,12 +93,12 @@
   }
 
   .dropdown select:hover {
-    border-color: #ffb803;
+    border-color: #007bff;
   }
 
   .dropdown select:focus {
     outline: none;
-    border-color: #ffb803;
+    border-color: #007bff;
   }
 
   .dropdown::after {
@@ -135,7 +135,15 @@
     /* Expand width to 100% on hover */
 
   }
-  .logout-btn{
+
+  .logout-btn {
+    color: white;
     background-color: #212121;
     border: none;
+  }
+
+  .bg-cat {
+    background-color: #FFF;
+    color: #212121;
+    border-radius: 10px;
   }
