done project invite component!

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -116,6 +116,7 @@
     height: 30px;
     font-size: 1.3rem;
     padding: 0 12px;
+    
   }
 
   .linkStyle::before {
@@ -143,7 +144,8 @@
   }
 
   .bg-cat {
-    background-color: #FFF;
-    color: #212121;
+    background-color: #212121;
+    color: #ffffff;
     border-radius: 10px;
+    
   }
