--- a/src/components/EducationSection/EducationSection.css
+++ b/src/components/EducationSection/EducationSection.css
@@ -41,3 +41,16 @@
     font-weight: normal;
     margin-top: 3rem;
 }
+
+@media screen and (max-width: 768px) {
+  .ed-h1>h1 {
+    font-size: 4.5rem;
+    top: 12%;
+  }
+
+  .ed-btn>button {
+    width: 100%;
+    max-width: 300px;
+    font-size: 1.5rem;
+  }
+}
