--- a/src/components/EducationUpload/EducationUpload.css
+++ b/src/components/EducationUpload/EducationUpload.css
@@ -1,10 +1,7 @@
-
-.breadcrumb {
+/* .breadcrumb {
     background-color: transparent;
-  }
-  
-  
-  .breadcrumb .active {
-    color: #05386b;
-  }
-  
+  } */
+
+.breadcrumb .active {
+  color: #05386b;
+}
