--- a/src/Pages/FrontPage.css
+++ b/src/Pages/FrontPage.css
@@ -1,210 +1,202 @@
-@import url('https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap");
 
 .hs-right {
-    display: flex;
-    margin-top: 8rem;
-    width: 100%;
-    margin: 5rem auto;
-
+  display: flex;
+  margin-top: 8rem;
+  width: 100%;
+  margin: 5rem auto;
 }
 
 .hs-left {
-    margin: 5rem 5rem;
-
-
+  margin: 5rem 5rem;
 }
 
-.hs-left>img {
-    height: 600px;
+.hs-left > img {
+  height: 600px;
 
+  object-fit: contain;
+  border-radius: 20px;
+  border: 1px solid #ebcc028c;
+  transition: transform 0.5s ease;
+}
+
+.hs-left > h1 {
+  position: absolute;
+  top: 3%;
+  left: 65%;
+  font-family: "Herr Von Muellerhoff", cursive;
+  color: #c59d5f;
+  font-size: 5.4rem;
+}
+
+.hs-right > .cardFP {
+  width: 600px;
+  height: 500px;
+  background: #07182e;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+
+  .hs-left {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
+  }
+
+  .hs-right {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
+  }
+
+  .hs-left > h1 {
+    font-family: "Herr Von Muellerhoff", cursive;
+    color: #c59d5f;
+    font-size: 5.4rem;
+  }
+
+  @media (max-width: 1280px) {
+    .hs-left > h1 {
+      font-size: 4rem;
+    }
+  }
+
+  border-radius: 20pxa;
+}
+
+.hs-right > .cardFP {
+  width: 600px;
+  height: 500px;
+
+  position: relative;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+  border: 1px solid #ebcc028c;
+}
+
+.row {
+  display: flex;
+}
+
+.hs-right > .cardFP .box1 {
+  color: white;
+  font-size: 1.8rem;
+  margin: 10px;
+
+  z-index: 10;
+  height: 180px;
+  width: 200px;
+  border: 1px solid rgba(255, 255, 255, 0.506);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #ebcc02;
+}
+
+.hs-right > .cardFP::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(
+    180deg,
+    rgb(0, 183, 255),
+    rgb(255, 48, 255)
+  );
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+}
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.hs-right > .cardFP::after {
+  content: "";
+  position: absolute;
+  background: #000000;
+  inset: 5px;
+  border-radius: 15px;
+}
+
+.hs-right > .cardFP .box1:hover {
+  box-shadow: 0 0 20px rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+  .homepage-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hs-left > img {
+    height: 300px;
+    /* width: 100%; */
     object-fit: contain;
     border-radius: 20px;
     border: 1px solid #ebcc028c;
     transition: transform 0.5s ease;
 
-}
+    /* Add transition for smooth effect */
+  }
 
-
-
-.hs-left>h1 {
+  .hs-left > h1 {
     position: absolute;
-    top: 3%;
-    left: 65%;
+    top: 23%;
+    left: 43%;
     font-family: "Herr Von Muellerhoff", cursive;
     color: #c59d5f;
-    font-size: 5.4rem;
-}
+    font-size: 4rem;
+  }
 
-.hs-right>.cardFP {
-    width: 600px;
-    height: 500px;
-    background: #07182E;
+  .hs-right > .cardFP {
+    width: 300px;
+    height: 300px;
+    background: #07182e;
     position: relative;
     display: flex;
     place-content: center;
     place-items: center;
     overflow: hidden;
-
-    .hs-left {
-        margin-top: 5rem;
-        margin-bottom: 5rem;
-        text-align: center;
-
-    }
-
-    .hs-right {
-        margin-top: 5rem;
-        margin-bottom: 5rem;
-        text-align: center;
-
-    }
-
-    .hs-left>h1 {
-        font-family: "Herr Von Muellerhoff", cursive;
-        color: #c59d5f;
-        font-size: 5.4rem;
-    }
-
-    @media (max-width: 1280px) {
-        .hs-left>h1 {
-            font-size: 4rem;
-        }
-    }
-
-    border-radius: 20pxa;
-
-}
-
-.hs-right>.cardFP {
-    width: 600px;
-    height: 500px;
-
-    position: relative;
-    display: flex;
-    flex-direction: column;
-
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
     border-radius: 20px;
-    border: 1px solid #ebcc028c;
-}
+  }
 
-.row {
-    display: flex;
-}
-
-.hs-right>.cardFP .box1 {
+  .hs-right > .cardFP .box1 {
     color: white;
-    font-size: 1.8rem;
+    font-size: 1rem;
     margin: 10px;
-
     z-index: 10;
-    height: 180px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     border: 1px solid rgba(255, 255, 255, 0.506);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-    color: #ebcc02;
-
-}
-
-.hs-right>.cardFP::before {
-    content: '';
-    position: absolute;
-    width: 100px;
-    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
-    height: 130%;
-    animation: rotBGimg 3s linear infinite;
-    transition: all 0.2s linear;
-}
-
-@keyframes rotBGimg {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.hs-right>.cardFP::after {
-    content: '';
-    position: absolute;
-    background: #000000;
-    inset: 5px;
-    border-radius: 15px;
-}
-
-.hs-right>.cardFP .box1:hover {
-    box-shadow: 0 0 20px rgb(255, 255, 255);
-    cursor: pointer;
-}
-
-
-@media (max-width:1280px) {
-    .homepage-section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .hs-left>img {
-        height: 300px;
-        /* width: 100%; */
-        object-fit: contain;
-        border-radius: 20px;
-        border: 1px solid #ebcc028c;
-        transition: transform 0.5s ease;
-
-        /* Add transition for smooth effect */
-    }
-
-    .hs-left>h1 {
-        position: absolute;
-        top: 23%;
-        left: 43%;
-        font-family: "Herr Von Muellerhoff", cursive;
-        color: #c59d5f;
-        font-size: 4rem;
-    }
-
-    .hs-right>.cardFP {
-        width: 300px;
-        height: 300px;
-        background: #07182E;
-        position: relative;
-        display: flex;
-        place-content: center;
-        place-items: center;
-        overflow: hidden;
-        border-radius: 20px;
-    }
-
-    .hs-right>.cardFP .box1 {
-        color: white;
-        font-size: 1rem;
-        margin: 10px;
-        z-index: 10;
-        height: 100px;
-        width: 100px;
-        border: 1px solid rgba(255, 255, 255, 0.506);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 10px;
-    }
-
+  }
 }
